<resources>
    <string name="app_name">PCOG</string>
    <string name="name1">PCOG</string>
    <string name="location">Portmore</string>
    <string name="name">PCOG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_settings">Settings</string>
    <string name="Announce">Inbox</string>
    <string name="SchoolURL">http://hs.grandblancschools.org</string>
    <string name="NoAnnouncements">No announcements.</string>
    <string name="AnnounceLoadError">Could not load announcements.</string>
    <string name="NoCalendar">Could not load calendar.</string>
    <string name="NoTwitterRefresh">Could not reload tweets.</string>
    <string name="Retry">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullday">Divine Service</string>
    <string name="halfday">Sunday School</string>
    <string name="latestart">Weekly</string>
    <string name="divineservice">
    PRAYER:           7:30am
    \n\nSUNDAY SCHOOL:    8:30am
    \n\nDIVINE SERVICES:  9:30am

    \n\n SUNDAY EVENING SERVICES
    \n 1st Sunday - Evangelistic Outreach:.......6:30pm
    \n 2nd Sunday - Women and Men Fellowship:... 6:30om
    \n 3rd Sunday - Family Focus:............... 6:30pm
    \n\n***There will be a tone at 8:16, 9:20, 10:29, 12:05 and 1:09 to release travelers to their next class. All non-traveling students must remain in class until the official end of the period.</string>
    <string name="sundayschool">
    PRAYER :       8:30am
    \n2nd Hour:    7:54 - 8:22 (28 minutes)
    \n3rd Hour:    8:28 - 9:01 (29 minutes)
    \n\nNo lunch is served on a half day.
    \n\n4th Hour:   9:07 - 9:35 (28 minutes)
    \n5th Hour:   9:41 - 10:09 (28 minutes)
    \n6th Hour:    10:15 - 10:43 (28 minutes)
    \n\n***There will be a tone at 7:45, 8:19, 8:58, 9:32 and 10:06 to release travelers to their next class. All non-traveling students must remain in class until the official end of the period.</string>
    <string name="weeklyservices">
    TUESDAYS
    \nBible Study abd Prayer Meeting:    6:30pm
    \n\nWEDNESDAYS
    \nPrayer and Fasting Meeting:    10:00am
    \n\nFRIDAYS
    \nYouth Fellowship:    6:30pm

    \n\n*Office Hours : Mondays, Wednesdays and Fridays
    \n9:00 a.m to 1:00 p.m. </string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Portmore Church of God</string>
    <string name="slide_1_desc">This app will keep you informed about upcoming events and programmes through Portmore Church of God..</string>
    <string name="slide_2_title">Scripture Reading</string>
    <string name="slide_2_desc">All Scripture is God-breathed and is useful for teaching, rebuking, correcting and training in righteousness; 2 Timothy 3:16</string>
    <string name="slide_3_title">Praying</string>
    <string name="slide_3_desc">And pray in the Spirit on all occasions with all kinds of prayers and requests. With this in mind, be alert and always keep on praying for all the Lords people; Ephesians 6:18. </string>
    <string name="slide_4_title">Kindness</string>
    <string name="slide_4_desc">But the fruit of the Spirit is love, joy, peace, patience, kindness, goodness, faithfulness; Galations 5:22.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_maps">Location</string>
    <string name="pressbackagain">Press back again to exit</string>
    <string name="PlayNow">Play Now</string>
    <string name="Link">https://www.npr.org/rss/podcast.php?id=510298</string>
    <string name="language_code">Language Code</string>
    <string name="loading">Loading...</string>
    <string-array name="endpoints_list">
        <item>Volume</item>
        <item>VolumeLanguage</item>
        <item>Book</item>
        <item>Audio</item>
        <item>Video</item>
        <item>Text</item>
    </string-array>
    <string name="testsong_20_sec">https://goo.gl/eeKZxa</string>
    <string name="mission">Our Mission</string>
    <string name="mission_text">Guided by the Holy Spirit and the Word, and until Jesus returns; we are committed to HELP....</string>
    <string name="vision">Our Vision</string>
    <string name="vision_text">A model evangelical church reaching and redeeming the nations......</string>
    <string name="aff">Our Affiliates</string>
    <string name="aff_text">Portmore Church of God affiliates</string>
    <string name="history">Our History</string>
    <string name="history_text">July 30, 1907 is a most important date for the Church of God in Jamaica. On that day a young man of twenty-four, his wife and twenty....</string>
    <string name="leadership">Our Leadership</string>
    <string name="leadership_text">PCOG is located at 58a Barbara Avenue, Edgewater, Jamaica</string>
    <string name="contact">Our Contact</string>
    <string name="contact_text">Thisis how to get in touch with us...</string>
    <string name="search">Search</string>
    <string name="nothing_playing">Nothing is Playing</string>
    <string name="Admin">Leadership</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="email_fmt">Email: %s</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">CLOSE</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">
                <![CDATA[<< Back]]>
    </string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="user_name">Ardenne Preparatory</string>
    <string name="email">ardenneprep@gmail.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">Login</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="text2">Welcome to the HEART Trust/NTA online application page. Please follow the instructions as you proceed.</string>
</resources>