<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_splash"
    android:fitsSystemWindows="true"
    card_view:cardBackgroundColor="@android:color/transparent"
    tools:context="org.jamaica.pcog.mobile.login.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:visibility="gone" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/background_gradient"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/colin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/mylogin"
        android:orientation="vertical"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:drawableRight="@drawable/ic_person"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:drawableRight="@drawable/ic_person"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHighlight="@color/cardview_light_background"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@color/cardview_light_background"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="10dip"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="45dip"
                    android:background="@drawable/mybutton"
                    android:text="@string/btn_login"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="15dip"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="150dp"
                    android:layout_height="45dip"
                    android:background="@drawable/mybutton"
                    android:elevation="0dp"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="10dip"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="5sp"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textColorLink="@color/background"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_width="135sp"
        android:layout_height="135sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50sp"
        android:background="@drawable/background_white"
        android:padding="5dp"
        android:src="@drawable/logo1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageVIew"
        android:layout_centerHorizontal="true"
        android:text="Member Access"
        android:textColor="#FFF"
        android:textSize="20sp" />

</RelativeLayout>
